--- a/wineshare/src/main/resources/templates/marketing/marketingList.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingList.html
@@ -76,13 +76,13 @@
         <div class="search-sort" th:object="${marketingSearchDTO}">
             <form th:action="@{'/marketings/'+ ${marketCategory} + '/list'}" role="form" method="get">
 
-            <div class="marketing-sort">
-                <h5>Sort by</h5>
-                <select th:field="*{sortOrder}" style="height: 25px; font-size:12px;">
-                    <option value="">기본순</option>
-                    <option value="최신순">최신순</option>
-                </select>
-            </div>
+<!--            <div class="marketing-sort">-->
+<!--                <h5>Sort by</h5>-->
+<!--                <select th:field="*{sortOrder}" style="height: 25px; font-size:12px;">-->
+<!--                    <option value="">기본순</option>-->
+<!--                    <option value="최신순">최신순</option>-->
+<!--                </select>-->
+<!--            </div>-->
 
                 <div class="data-all">
                     <div class="data-search">
