--- a/wineshare/src/main/resources/static/wineshare-css/wine-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/wine-form.css
@@ -1,6 +1,8 @@
 .wine-form{
     width: 80%;
     margin: 0 auto;
+    margin-bottom:5%;
+
 }
 
 .wine-form h1{
@@ -17,4 +19,57 @@
 }
 .fa-star.active {
     color: #ffb136 !important;
+}
+
+.comment-respond{
+    border: 1px solid #e5e5e5;
+    padding:20px;
+    margin-bottom:3%;
+}
+
+.add-develop{
+   padding:15px 0;
+}
+
+
+
+.taste-like{
+    display: flex;
+   flex-direction: row; /* 가로 방향으로 정렬 */
+    justify-content: space-between; /* 각 항목 간의 간격을 균등하게 분배 */
+    align-items: flex-start; /* 세로 정렬을 상단에 맞춤 */
+}
+
+.taste-like h3{
+    text-align:center;
+}
+
+
+
+.taste-category {
+    width:10%;
+  margin-right: 50px; /* 각 항목 간의 간격 추가 */
+}
+
+.wheel-category{
+    width:15%;
+    margin-right: 30px; /* 각 항목 간의 간격 추가 */
+}
+
+.aroma-food{
+     display: flex;
+     flex-direction: row; /* 가로 방향으로 정렬 */
+     justify-content: space-between; /* 각 항목 간의 간격을 균등하게 분배 */
+     align-items: flex-start; /* 세로 정렬을 상단에 맞춤 */
+}
+
+.aroma-food{
+    text-align:center;
+}
+
+.submit{
+    color:#c02323;
+    background: #e5e5e5;
+    float:right;
+    margin-bottom:1%;
 }
