--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -17,30 +17,25 @@
             <ul class="menu">
 
               <li class="active">
-<!--                <a href="about.html" title="">About Us</a>-->
                 <span class="mouse-pointer">About Us</span>
                 <ul class="sub-menu">
                   <li><a th:href="@{'/about/aboutUs'}" title="">Wine Share</a></li>
                   <li><a th:href="@{'/boards/notice/list'}" title="notice">공지사항</a></li>
-                  <!--                                <li><a href="Coming-soon.html" title="">Bistro</a></li>-->
-                  <!--                                <li><a href="404-page.html" title="">Promotion</a></li>-->
-                  <!-- <li><a href="Wish-list.html" title="">Wish List</a></li>-->
+
                 </ul><!-- /.sub-menu -->
               </li>
 
 
               <li class="active a">
-                <a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=&sortBy='}" title="Wine List">Wine</a>
+                <a th:href="@{'/wines/list'}" title="Wine List">Wine</a>
                 <ul class="sub-menu">
                   <!--                                    <li class="active"><a href="home1.html" title="">Red</a></li>-->
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=RED&sortBy='}" title="Wine List-RED">RED</a></li>
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=WHITE&sortBy='}" title="Wine List-WHITE">WHITE</a></li>
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=SPARKLING&sortBy='}" title="Wine List-SPARKLING">SPARKLING</a></li>
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=ROSE&sortBy='}" title="Wine List-ROSE">ROSE</a></li>
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=DESSERT&sortBy='}" title="Wine List-DESSERT">DESSERT</a></li>
-                  <li><a th:href="@{'/wines/list/0?minPrice=&maxPrice=&searchWineType=PORT&sortBy='}" title="Wine List-PORT">PORT</a></li>
-                  <!--                                    <li><a href="/shop/Shop-order-tracking.html" title="">Shop Order Tracking</a></li>-->
-                  <!--                                    <li><a href="/shop/Shop-cart.html" title="">Shop Cart</a></li>-->
+                  <li><a th:href="@{'/wines/list/0?searchWineType=RED'}" title="Wine List-RED">RED</a></li>
+                  <li><a th:href="@{'/wines/list/0?searchWineType=WHITE'}" title="Wine List-WHITE">WHITE</a></li>
+                  <li><a th:href="@{'/wines/list/0?searchWineType=SPARKLING'}" title="Wine List-SPARKLING">SPARKLING</a></li>
+                  <li><a th:href="@{'/wines/list/0?searchWineType=ROSE'}" title="Wine List-ROSE">ROSE</a></li>
+                  <li><a th:href="@{'/wines/list/0?searchWineType=DESSERT'}" title="Wine List-DESSERT">DESSERT</a></li>
+                  <li><a th:href="@{'/wines/list/0?searchWineType=PORT'}" title="Wine List-PORT">PORT</a></li>
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
@@ -49,8 +44,6 @@
                   <li><a th:href="@{'/marketings/winebar/list'}" title="">Wine Bar</a></li>
                   <li><a th:href="@{'/marketings/bottleshop/list'}" title="">Bottle Shop</a></li>
                   <li><a th:href="@{'/marketings/bistro/list'}" title="">Bistro</a></li>
-                  <!--                                    <li><a href="404-page.html" title="">Promotion</a></li>-->
-                  <!--                                    <li><a href="Wish-list.html" title="">Wish List</a></li>-->
                 </ul><!-- /.sub-menu -->
               </li>
               <li class="active">
@@ -71,13 +64,6 @@
                   <!--                                    <li><a href="Blog-details-fullwidth.html" title="">Blog Details FullWidth</a></li>-->
                 </ul><!-- /.sub-menu -->
               </li>
-              <!--                        <li class="active">-->
-              <!--                            <a href="#" title="">Events</a>-->
-              <!--                                <ul class="sub-menu">-->
-              <!--                                    <li><a href="contact-1.html" title="">Contact Us 1</a></li>-->
-              <!--                                    <li><a href="Contact-2.html" title="">Contact Us 2</a></li>-->
-              <!--                                </ul>&lt;!&ndash; /.sub-menu &ndash;&gt;-->
-              <!--                         </li>-->
             </ul>
           </nav>
         </div><!-- /.nav-wrap -->
