--- a/wineshare/src/main/resources/static/wineshare-css/board-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/board-form.css
@@ -1,6 +1,6 @@
 .board-form{
     width:80%;
-    border: 1px solid #e5e5e5;
+    /*border: 1px solid #e5e5e5;*/
     margin: 0 auto;
     margin-top: 3%;
     margin-bottom: 3%;
