--- a/wineshare/src/main/resources/static/wineshare-css/board-get-form.css
+++ b/wineshare/src/main/resources/static/wineshare-css/board-get-form.css
@@ -19,3 +19,35 @@
 .status-title{
     padding: 15px 0;
 }
+
+
+.board-table{
+    border: 1px solid #e5e5e5;
+     margin: 0 auto;
+     margin-top:50px;
+}
+
+th, td{
+    border: 1px solid #e5e5e5;
+    padding: 15px;
+}
+
+th{
+    text-align: center;
+    background: #e5e5e5;
+}
+
+.board-form{
+    position:relative;
+}
+.modify-btn{
+   border: 1px solid #c02323;
+   padding: 10px 25px;
+   background: #c02323;
+   color: #e5e5e5;
+   border-radius:5px;
+   position:absolute;
+   right:0;
+   top:50px;
+}
+
