--- a/wineshare/src/main/resources/templates/board/boardList.html
+++ b/wineshare/src/main/resources/templates/board/boardList.html
@@ -142,8 +142,8 @@
                 </select>
 
                 <div class="form-group-search">
-                    <input type="text" th:field="*{searchQuery}" class="form-control" placeholder="Search...">
-                    <button type="submit" id="searchIcon" class="btn text-white" style="background-color: #E1B848; height: fit-content;" >
+                    <input type="text" th:field="*{searchQuery}" class="form-control" placeholder="Search..." style="font-size:14px;">
+                    <button type="submit" id="searchIcon" class="search-btn">
                         enter
                     </button>
                 </div>
