--- a/wineshare/src/main/resources/templates/marketing/marketingList.html
+++ b/wineshare/src/main/resources/templates/marketing/marketingList.html
@@ -89,7 +89,7 @@
                         <!--                <input type="hidden" th:field="*{searchType}" value="T">-->
                         <input type="hidden" th:value="${marketCategory}" id="hidden-marketCategory">
                         <input type="text" class="form-control" th:field="*{searchQuery}" placeholder="Search...">
-                        <button type="submit" id="searchIcon" class="data-btn" style="background-color: #E1B848; height: 25px;" >
+                        <button type="submit" id="searchIcon" class="data-btn" style="background-color: #e5e5e5;" >
                             enter
                         </button>
                     </div>
@@ -104,7 +104,7 @@
 
 
         <div class="main-blog-grid">
-            <div class="container clearfix">
+            <div class="mark-grin">
                 <div class="article-container">
 
                     <article class="post marketing_list_wrap" th:each="marketingDTO : ${marketingDTOs}">
