--- a/wineshare/src/main/resources/static/wineshare-css/board-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/board-list.css
@@ -171,7 +171,6 @@ a {
 
 .form-list-type{
     width:7%;
-    height: calc(1.5em + 0.25rem + 2px);
     padding: 0.2rem 0.75rem;
     position: absolute;
     bottom: -10px;
@@ -187,22 +186,27 @@ a {
 
 
 .regbutton{
-    height: 27%;
+
     font-size: 14px;
     color: #c02323;
     border: 1px solid #c02323;
-    font-size: 14px;
+    font-size: 16px;
     background: #c02323;
     color: #e5e5e5;
-    padding: 7px 20px;
+    padding: 14px 30px;
     position: absolute;
     right: 0;
     bottom: 5px;
     border-radius:5px;
 }
-
-input[type="text"]{
-    height:10%;
+.search-btn{
+    height:45px;
+    padding: 7px 15px;
+    border-radius:5px;
+    background: #e5e5e5;
+    color: #191919;
 }
+
+
 
 
