--- a/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
+++ b/wineshare/src/main/resources/static/wineshare-css/marketing-list.css
@@ -1,11 +1,10 @@
 .marketlist-container{
-    width:90%;
     border: 1px solid #FFFFFF;
     /*border-style:none;*/
     margin: 0 auto;
     margin-top:2%;
     margin-bottom:2%;
-    margin-right:100px;
+
 }
 
 .search-sort{
@@ -22,39 +21,39 @@
     padding: 5px;
 }
 
-input[type="text"]{
-  width:60%;
-  height:25px;
-}
 
 .data-search{
-    position:absolute;
-    right:100px;
-    top:26px;
+    position: absolute;
+    left:4.5%;
+
 }
 
 .data-btn{
    font-size:10px;
-   color:#FFFFFF;
+   color:#595959;
    position: absolute;
-   right:54px;
+    left:100%;
    top:0px;
-   border: 1px solid #E1B848;
+   border: 1px solid #e5e5e5;
    border-radius:5px;
+   padding: 7px 15px;
+   height:46px;
 }
 
 .market-reg{
-    padding: 7px 20px;
+    padding: 13px 30px;
     border: 1px solid #c02323;
     border-radius:5px;
+    position: absolute;
+    right:5%;
 }
 
 .marketing_list_wrap{
     width:100%;
-    height:400px;
-    border: 1px solid #000000;
-
+    height:100%;
+    border: 1px solid #FFFFFF;
     position:relative;
+
 }
 
 .featured-post{
@@ -78,7 +77,7 @@ input[type="text"]{
     border: 1px solid #000000;
     width:45%;
     position:absolute;
-    top:50px;
+    top:10%;
     right:0px;
     border-style:none;
 }
@@ -89,7 +88,7 @@ input[type="text"]{
     font-weight:bold;
     width:45%;
     position:absolute;
-    top:100px;
+    top:23%;
     right:0px;
     border-style:none;
 }
@@ -99,7 +98,7 @@ input[type="text"]{
     color:#a6a6a6;
     width:45%;
     position:absolute;
-    top:150px;
+    top:35%;
     right:0px;
     border-style:none;
 }
@@ -110,7 +109,7 @@ input[type="text"]{
     width:45%;
     overflow:hidden;
     position:absolute;
-    bottom:120px;
+    top:50%;
     right:0px;
     border-style:none;
 }
@@ -161,19 +160,22 @@ input[type="text"]{
 
 
 .post-submit{
-border: 1px solid #000000;
+    border: 1px solid #000000;
     position:absolute;
-    bottom:10px;
-    right:0px;
+    bottom:5%;
+    right:5%;
     border-style:none;
 
 }
 
 .article-container{
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows:30% 30% 30%;
-    gap:30px 80px;
+    grid-template-columns: 45% 45%;
+    grid-template-rows:35% 35% 35%;
+    gap:20px 20px;
+    justify-content: center;
+    margin-top:7%;
+    margin-bottom: 10%;
 }
 
 
