--- a/wineshare/src/main/resources/templates/fragments/header.html
+++ b/wineshare/src/main/resources/templates/fragments/header.html
@@ -29,7 +29,7 @@
               <li class="active a">
                 <a th:href="@{'/wines/list'}" title="Wine List">Wine</a>
                 <ul class="sub-menu">
-                  <!--                                    <li class="active"><a href="home1.html" title="">Red</a></li>-->
+                  <!--                                    <li class="active"><a href="main.html" title="">Red</a></li>-->
                   <li><a th:href="@{'/wines/list/0?searchWineType=RED'}" title="Wine List-RED">RED</a></li>
                   <li><a th:href="@{'/wines/list/0?searchWineType=WHITE'}" title="Wine List-WHITE">WHITE</a></li>
                   <li><a th:href="@{'/wines/list/0?searchWineType=SPARKLING'}" title="Wine List-SPARKLING">SPARKLING</a></li>
